--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,10 @@
 ---
 adguard_blocking_mode: default
 adquard_blocked_response_ttl: 10
+adguard_cache_size: 4194304
+adguard_cache_ttl_min: 0
+adguard_cache_ttl_max: 0
+adguard_cache_optimistic: false
 adguard_client_resolve: true
 adguard_clients: []
 #  - name: testhost
@@ -113,7 +117,7 @@ adguard_tls_sni_check: false
 adguard_url: "{{ ansible_fqdn }}"
 adguard_user: admin
 adguard_verbose: false
-adguard_version: v0.107.26
+adguard_version: v0.107.32
 adguard_whitelist:
   - enabled: true
     url: https://raw.githubusercontent.com/anudeepND/whitelist/master/domains/whitelist.txt
